# sudoker

./: README.md
workspace/: Cargo.toml
workspace/libsudoku/: Cargo.toml
workspace/libsudoku/src/: checker.rs  lib.rs  loc.rs  verifier.rs
