[package]
name = "libsudoku"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Grzemski <adrian.grzemski@gmail.com>"]
description = "Library for solving sudoku puzzles"
readme = "README.md"
repository = "https://github.com/grzadr/sudoker/workspace/libsudoku"
license = "GPL-3.0 license"
keywords = ["sudoku", "solve"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
